public/styles/site.scss
// ========================
// Global Variables 
// ========================

$theme_color: rgb(133, 214, 45);
$theme_gutter: 25px;

a{
	text-decoration: none;
	color: inherit;
}

img{
	max-width: 100%;
}

body{
	position: relative;
	min-height: 100vh;
	font-family: 'Open Sans', sans-serif;
}

strong{
	font-weight: inherit;
}

h1, h2, h3, h4{
	margin: 0;
}

h1, h2{
	font-family: 'Montserrat', sans-serif;
}

.center{
	text-align: center;
}

.left{
	float: left;
}

.right{
	float: right;
}

.clearfix {
  overflow: auto;
  zoom: 1;
}

.section{
	position: relative;
}

.background{
	position: absolute;
	top: 0;
	height: 100%;
	width: 100%;
	background-attachment: fixed;
	background-size: cover;
	background-position: center;

	&:before{
		position: absolute;
		height: 100%;
		width: 100%;
		content: " ";
	}
}

.font--white{
	color: white;
}

.font--theme{
	color: $theme_color;
}


// ========================
.section__intro{
	min-height: 100vh;
	z-index: -5;

	.brand{
		position: fixed;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		margin: auto;
		width: 80vw;
		height: 50vh;

		h1{
			font-size: 10vw;
			font-weight: bold;
			line-height: 1em;
		}
		h2{
			font-size: 1em;
			font-weight: 100;
			margin: $theme_gutter;
		}
	}
}

.background__intro{
	background-image: url('../images/background_low.jpg');

	&:before{
		background-color: rgba(0,0,0,0.4);
	}
}

.section__about{
	background-color: whitesmoke;
	box-shadow: rgba(0,0,0,0.8) 0px 0px 11px -2px;

	.about__me{
		background-color:white;
		background-image: url('../images/me_prof_transparent.png');
		background-size: contain;
		background-repeat: no-repeat;
		background-position: bottom right;
	}

	.about__bio__inner{
		font-family: 'Open Sans', sans-serif;
		font-weight: 100;
		text-align: justify;
		padding: $theme_gutter;

		p{
			margin-bottom: 15px;
			line-height: $theme_gutter;
		}

		.greeting{
			font-size: 2.45em;
			color: $theme_color;
		}

		.quote{
			font-style: italic;
		}
	}
}

.button{
	display: inline-block;
	padding: 5px;
	background-color: $theme_color;
	border: 2px solid $theme_color;
	color: white;
	font-family: 'Open Sans', sans-serif;
	font-weight: 100;

	&:hover, &.is-checked{
		color: $theme_color;
		background-color: white;
	}
}

.background__skills{
	z-index: -1;
	background-image: url('../images/skills.jpg');
	&:before{
		background-color: darken($theme_color, 30%);
		opacity: 0.7;
	}
}

h3, h4{
	font-family: 'Open Sans', sans-serif;
	font-weight: 100;
}

h4{
	font-size: 1.2em;
}

h3{
	font-size: 2.5em;
	text-align: center;
	padding: $theme_gutter 0;
}

.skills__inner{
	padding: 0 $theme_gutter $theme_gutter $theme_gutter;
}

.skills__lists{
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
}

.skills__list{
	font-family: 'Open Sans', sans-serif;
	font-weight: 100;
	padding: 0 $theme_gutter;
	flex-basis: auto;

	ul{
		padding-left: 20px;
	}

	li{
		line-height: 1.5em;
	}
}

.section__work{
	background-color: white;
}

.button-group{
	padding: 0 0 30px 0;

	.button{
		text-transform: uppercase;
	}
}

.item{
	margin: 5px;
}

footer{
	position: absolute;
	bottom: 0;
	background-color: whitesmoke;
	padding: $theme_gutter;
	font-family: 'Open Sans', sans-serif;
	font-weight: 100;
	line-height: 32px;
	width: calc(100% - 50px);



	a{
		color: lightgrey;

		&:hover{
			color: $theme_color;
		}
	}
}

.right a{
		font-size: 2.2em;
		margin: 0 5px;	
	}

section:last-of-type{
	padding-bottom: 90px;
}

// PROJECT PAGE =======================

.single-project{
	padding: $theme_gutter;
}

.back{
	text-transform: uppercase;
	font-weight: 100;
	color: lightgrey;

	&:hover{
		color: $theme_color;
	}
}

.project-title{
	font-weight: bold;
	text-transform: uppercase;
	color: $theme_color;
	margin: $theme_gutter 0;

	&:after{
			margin: $theme_gutter 0 0 0;
			display: block;
			content: "";
			background-color: lightgrey;
			opacity: .5;
			width: 40%;
			height: 2px;
	}
}

	.project-info{
		padding-right: 15px;

		h1{
			font-weight: 100;
			font-family: 'Open Sans', sans-serif;
		}

		p, h6, ol{
			font-family: 'Open Sans', sans-serif;
			line-height: 25px;
			margin: 15px 0;
			font-weight: 100;
		}

		iframe{
			width: 100%;
		}
		img{
			max-width: 100%;
			height: auto;
		}
		a{
			color: $theme_color;
		}

		em{
			font-style: italic;
		}
	}

